git feat 更简单的解决slf4j和log4j2的异常问题，切换到正确的包