@@ -82,7 +82,7 @@
 
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
+            <artifactId>log4j-slf4j2-impl</artifactId>
             <version>2.23.1</version>
         </dependency>
 
@@ -172,8 +172,8 @@
                                 </argument>
                                 <argument>--java-options</argument>
                                 <argument>--enable-preview</argument>
-                                <argument>--java-options</argument>
-                                <argument>--add-reads org.slf4j=org.apache.logging.log4j.slf4j.impl</argument>
+<!--                                <argument>&#45;&#45;java-options</argument>-->
+<!--                                <argument>&#45;&#45;add-reads org.slf4j=org.apache.logging.log4j.slf4j.impl</argument>-->
                                 <argument>--runtime-image</argument>
                                 <argument>
                                     ${project.build.directory}/build-link
@@ -244,8 +244,6 @@
                                 </argument>
                                 <argument>--java-options</argument>
                                 <argument>--enable-preview</argument>
-                                <argument>--java-options</argument>
-                                <argument>--add-reads org.slf4j=org.apache.logging.log4j.slf4j.impl</argument>
                                 <argument>--app-version</argument>
                                 <argument>1.0.0</argument>
                             </arguments>
@@ -269,7 +267,7 @@
                     <mainClass>my_driver/com.tom.JavafxMain</mainClass>
                     <options>
                         <option>--enable-preview</option>
-                        <option>--add-reads org.slf4j=org.apache.logging.log4j.slf4j.impl</option>
+<!--                        <option>&#45;&#45;add-reads org.slf4j=org.apache.logging.log4j.slf4j.impl</option>-->
                     </options>
                 </configuration>
             </plugin>
